# recsys_course

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lesson_7/: hometask.ipynb
